# Zill

./: Cargo.toml  LICENSE  README.md
examples/: agent_loop.rs  eval.rs
src/: error.rs  fs.rs  lib.rs  limits.rs  main.rs  parser.rs  session.rs
src/builtins/: fd.rs  mod.rs  rg.rs
tests/: stress_tests.rs
