[package]
name = "zill"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
shell-words = "1.1"
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"
ignore = "0.4"
memchr = "2.7"
path-clean = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"

[dev-dependencies]
proptest = "1.4"
